--- a/app/src/main/res/xml/wakeful.xml
+++ b/app/src/main/res/xml/wakeful.xml
@@ -1,3 +1,3 @@
 <WakefulIntentService
-    listener="com.fusionjack.slimota.scheduler.OTAListener"
+    listener="com.anand.aimota.scheduler.OTAListener"
     />
